src/alto-ui/Dropdown/Dropdown.scss
@import '../scss/inc';

.Dropdown {
  padding: 0;
  // abtitary amount
  max-width: 55rem;

  .Dropdown--left,
  .Dropdown--right {
    &.Dropdown--start {
      margin-top: -$spacing-small;
    }
    &.Dropdown--end {
      margin-bottom: -$spacing-small;
    }
  }
}

.Dropdown__list {
  list-style: none;
  padding: $spacing-x-small;
  max-height: 20rem; // abtitary amount
  overflow: auto;
}

.Dropdown__items-spinner {
  min-width: 10rem;
  height: 6rem;
}

.Dropdown__section {
  .Dropdown__item:not(:first-child) > & {
    margin-top: $spacing-small;
  }
}

.Dropdown__section-title {
  font-weight: $font-weight-semibold;
  font-size: $font-size-small;
  padding: $spacing-small;
  padding: $spacing-x-small $spacing-small;
  color: $color-text-muted;
}

.Dropdown__wrapper-trigger {
  max-width: inherit;
  &--clearable {
    position: relative;
  }
}

.Dropdown__trigger {
  max-width: inherit;

  &--clearable {
    padding-right: 1.5rem;
  }
}

.Dropdown__trigger-content {
  @extend %text-ellipsis;
  line-height: 1.2;
}

.Dropdown__trigger-spinner {
  margin-left: $spacing-small;
}

.Dropdown__icon-trigger {
  margin-left: $spacing-x-small;
  padding: $spacing-x-small;
  line-height: 0;
}

.Dropdown__icon-trigger--clear {
  @extend %reset-button;
  cursor: pointer;
  color: currentColor;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);

  &:hover {
    color: $blue;
  }
}

